--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -161,6 +161,10 @@
     @import 'components/skills';
 
 
+    // *--------- SINGLE PROJECT ---------*
+    @import 'components/single-project';
+
+
     // *--------- WHITE FRAME ---------*
     @import 'components/white-frame';
 
