--- a/src/sass/components/icons/_html-symbols-entities.scss
+++ b/src/sass/components/icons/_html-symbols-entities.scss
@@ -3,13 +3,15 @@
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~//
 
 
-// .arrow-right
-$ar-before__font-size: 1.05em !default;
-
-
 //.arrow-right {
-//    @include before {
+//    &::before {
 //        content: "\20\2794\20";
-//        font-size: $ar-before__font-size;
 //    }
 //}
+
+
+.black-star {
+    &::before {
+        content: '\2605';
+    }
+}
