--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -10,7 +10,7 @@ $main-header__fixed__background-color: $color__nero !default;
 $main-header__fixed__box-shadow: 0 0 8px 0 rgba($color__black-1, 0.8) !default;
 
 
-@mixin hide () {
+@mixin main-header-hide() {
     @include transform(translate3d(0, -100%, 0));
     @include opacity(0);
 }
@@ -27,7 +27,7 @@ $main-header__fixed__box-shadow: 0 0 8px 0 rgba($color__black-1, 0.8) !default;
         position: fixed;
         &,
         &.hide {
-            @include hide();
+            @include main-header-hide();
         }
         &.hide,
         &.show {
@@ -41,7 +41,7 @@ $main-header__fixed__box-shadow: 0 0 8px 0 rgba($color__black-1, 0.8) !default;
             @include transform(translate3d(0, 0, 0));
             @include opacity(1);
             @media screen and (max-height: ($main-header__height * 6)) {
-                @include hide();
+                @include main-header-hide();
             }
         }
     }
