--- a/src/templates/layout/_footer.pug
+++ b/src/templates/layout/_footer.pug
@@ -38,7 +38,7 @@ footer.main-footer
                 h3.heading.heading-5.main-footer-col-title.text-center= data.mainFooter.findMe.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
-                .row.align-content-center.align-items-center.justify-content-center.main-footer-findme-body
+                .main-footer-findme-body
                     a(href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.codepenAriaLabel class="btn btn-square btn-square-48 to-top btn-codepen color-white")
                         span(aria-hidden="true" class="icon icon-codepen")
                     a(href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label=data.mainFooter.findMe.body.facebookAriaLabel class="btn btn-square btn-square-48 to-top btn-facebook color-white")
