--- a/src/sass/components/_side-nav.scss
+++ b/src/sass/components/_side-nav.scss
@@ -38,7 +38,7 @@ $side-nav__button-toggle__height: $site-nav__main-header__height !default;
         }
         &.open {
             visibility: visible;
-            transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 1px);
             @include opacity(1);
         }
     }
