--- a/src/sass/components/buttons/_buttons.scss
+++ b/src/sass/components/buttons/_buttons.scss
@@ -40,8 +40,6 @@ $btn-twitter__color: $color__twitter !default;
     background-color: $btn__background-color;
     display: inline-block;
     z-index: 0;
-    transform: perspective(1px) translateZ(0);
-    backface-visibility: hidden;
     vertical-align: middle;
     font-family: $btn__font-family;
     font-size: $btn__font-size;
@@ -82,7 +80,7 @@ $btn-twitter__color: $color__twitter !default;
         &:hover,
         &:focus {
             &::after {
-                transform: translate3d(-100%, 0, 0);
+                transform: translate3d(-100%, 0, 1px);
             }
         }
     }
@@ -93,7 +91,7 @@ $btn-twitter__color: $color__twitter !default;
         &:hover,
         &:focus {
             &::after {
-                transform: translate3d(100%, 0, 0);
+                transform: translate3d(100%, 0, 1px);
             }
         }
     }
@@ -104,7 +102,7 @@ $btn-twitter__color: $color__twitter !default;
         &:hover,
         &:focus {
             &::after {
-                transform: translate3d(0, -100%, 0);
+                transform: translate3d(0, -100%, 1px);
             }
         }
     }
@@ -115,7 +113,7 @@ $btn-twitter__color: $color__twitter !default;
         &:hover,
         &:focus {
             &::after {
-                transform: translate3d(0, 100%, 0);
+                transform: translate3d(0, 100%, 1px);
             }
         }
     }
